# gmsv_mongo

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  compile_win_32.ps1  compile_win_64.ps1
.github/workflows/: build.yml  release.yml  rust.yml
examples/: create_collection.lua  delete_documents.lua  find_documents.lua  insert_document.lua  update_documents.lua
examples/glua/: first_join.lua
src/: lib.rs  logger.rs  mongo.rs  updatecheck.rs
src/functions/: mod.rs  mongodbclient.rs  mongodbcollection.rs  mongodbdatabase.rs
src/tests/: mod.rs  mongo_test.rs
src/udata/: mod.rs
src/utils/: luautils.rs  mod.rs
