[package]
name = "gmsv_mongo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 1

[dependencies]
rglua = { version = "2.1.0" }
termcolor = "1.4.1"
dotenv = "0.15.0"
log = "0.4.21"
serde = "1.0.188"
futures = "0.3.30"
tokio = { version = "1.32.0", features = ["full"] }
lazy_static = "1.4.0"
crossbeam = { version = "0.8", default-features = false, features = ["std", "crossbeam-channel"] }
singlyton = "4.1.1"


[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]