[package]
name = "gmsv_mongo"
version = "1.6.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 1

[dependencies]
rglua = { version = "3.0.0" }
termcolor = "1.4.1"
dotenv = "0.15.0"
futures = "0.3.30"
tokio = { version = "1.32.0", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1.0.188", features = ["derive"] }
ureq = { version = "2.5.0", features = ["json"] }

[dependencies.mongodb]
version = "3.0.0"